# hyperterse

./: .air.toml  .editorconfig  .gitignore  .golangci.yml  .mockery.yaml  CHANGELOGS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HYPERTERSE.md  Makefile  README.md  docker-compose.observability.yml  docker-compose.yml  go.mod  go.sum  install  install.sh  main.go  mongo.terse  myconfig.terse  myconfig.yaml  otel-collector-config.yaml  package.json  prometheus-config.yml  rust-toolchain.toml
.cursor/rules/global/: RULE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature-request.yml
.github/actions/publish-homebrew/: action.yml
.github/actions/publish-npm/: action.yml
.github/workflows/: README.md  ci.yml  publish.yml  release.yml
core/application/executor/: executor.go
core/application/services/: mcp.go  query.go
core/cli/: cli.go
core/cli/cmd/: build.go  dev.go  export.go  generate.go  init.go  llms.go  root.go  run.go  serve.go  skills.go  start.go  upgrade.go  validate.go
core/cli/internal/: loader.go
core/domain/: adapter.go  query.go
core/domain/interfaces/: connector.go  executor.go  logger.go  services.go
core/framework/: auth.go  bundler.go  compiler.go  compiler_test.go  engine.go  js_runtime.go  manifest.go  types.go  validate.go
core/infrastructure/connectors/: factory.go  manager.go  mongodb.go  mysql.go  postgres.go  redis.go
core/infrastructure/di/: container.go
core/infrastructure/logging/: zerolog.go
core/infrastructure/observability/: init.go  otel.go
core/infrastructure/transport/: unified.go
core/logger/: adapter.go  logger.go  tagged_error.go
core/observability/: config.go  contract.go  logging.go  metrics.go  setup.go  tracing.go
core/parser/: dsl.go  env_substitution.go  validator.go  yaml.go  yaml_test.go
core/runtime/: runtime.go
core/runtime/connectors/: connector.go  manager.go  mongodb.go  mongodb_test.go  mysql.go  postgres.go  redis.go
core/runtime/executor/: cache.go  executor.go
core/runtime/handlers/: handlers.go  (+3 more)
demo/: .hyperterse  README.md  config.terse  package.json
distributions/: PUBLISHING.md  README.md
distributions/homebrew/: hyperterse.rb
distributions/npm/: bin.js  bin.mjs  install.js  install.mjs  package.json
docs/: .gitignore  .prettierignore  .prettierrc  README.md  astro.config.mjs  configuration-schemas.md  docs.json  env.d.ts  installation.mdx  introduction.mdx  package.json  quickstart.mdx  tsconfig.json  v2-framework.md  v2-migration.md
docs/concepts/: adapters.mdx  architecture.mdx  authentication.mdx  project-structure.mdx  routes-and-tools.mdx  scripts.mdx  tools.mdx
docs/databases/: mongodb.mdx  mysql.mdx  postgresql.mdx  redis.mdx
docs/deployment/: aws.mdx  azure.mdx  bare-metal.mdx  build-and-serve.mdx  cloudflare.mdx  digital-ocean.mdx  docker.mdx  gcp.mdx  kubernetes.mdx  overview.mdx  railway.mdx  vercel.mdx
docs/getting-started/: installation.mdx  quickstart.mdx
docs/migration/: v1-to-v2.mdx
docs/observability/: README.md
docs/public/: robots.txt
docs/reference/: adapter-config.mdx  caching.mdx  cli.mdx  configuration-schemas.mdx  environment-variables.mdx  root-config.mdx  route-config.mdx  tool-config.mdx
docs/runtime/: caching.mdx  execution-pipeline.mdx  http-and-mcp.mdx  mcp-transport.mdx  observability.mdx
docs/security/: input-safety.mdx  production-hardening.mdx  sql-and-input-safety.mdx
grafana/: docker-compose.yml
grafana/dashboards/: hyperterse-overview.json  hyperterse-reliability.json
proto/: connectors.proto  hyperterse.proto  primitives.proto  runtime.proto
proto/connectors/: connectors.proto
proto/hyperterse/: hyperterse.proto
proto/primitives/: primitives.proto
proto/runtime/: runtime.proto
schema/: adapter.terse.schema.json  root.terse.schema.json  route.terse.schema.json  terse.schema.json  tool.terse.schema.json
scripts/: archive.ts  build.sh  build.ts  check-deps.sh  check-deps.ts  check.ts  clean.ts  create-archives.sh  create-archives.ts  fmt.ts  generate-proto.sh  generate-proto.ts  generate-schema.ts  generate-types.ts  generate_orders.go  help.ts  lint.ts  release.sh  release.ts  setup.sh  setup.ts  test.ts  update-homebrew-sha256.sh  update-homebrew-sha256.ts  upload-standalone-binaries.sh  version.sh  version.ts
scripts/generate_schema/: README.md  script.go
scripts/generate_types/: README.md  script.go
src/modules/cli/: Cargo.toml  lib.rs  main.rs
src/modules/cli/commands/: completion.rs  dev.rs  export.rs  generate.rs  init.rs  mod.rs  run.rs  upgrade.rs
src/modules/parser/: Cargo.toml  env.rs  lib.rs  validator.rs  yaml.rs
src/modules/runtime/: Cargo.toml  lib.rs  server.rs  state.rs
src/modules/runtime/connectors/: manager.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  traits.rs
src/modules/runtime/executor/: mod.rs  substitutor.rs  validator.rs
src/modules/runtime/handlers/: llms.rs  mcp.rs  mod.rs  openapi.rs  query.rs
src/modules/types/: Cargo.toml  connector.rs  lib.rs  primitive.rs  runtime.rs
src/schema/: terse.schema.json
tests/fixtures/: queries.go
tests/helpers/: test_helpers.go
tests/mocks/: MockConnector.go  MockConnectorManager.go  MockExecutor.go  MockLogger.go  MockMCPService.go  MockQueryService.go
(+107 files in other folders)
