[package]
name = "hyperterse-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration parsing for Hyperterse"

[lib]
path = "lib.rs"

[dependencies]
hyperterse-core = { workspace = true }
hyperterse-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
